fixing avatar cropping but must be modularized later

--- a/theme/FreesocTheme/css/modules/oldforms.css
+++ b/theme/FreesocTheme/css/modules/oldforms.css
@@ -30,14 +30,6 @@
 	padding: 0;
 	margin-top: 1em;
 }
-#form_settings_avatar img {
-	max-width: 40%;
-	height: auto;
-	float: left;
-}
-#avatar_preview {
-	float: right;
-}
 #form_settings_avatar #settings_attach {
 	clear: right;
 }
